--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Posts and Reposts",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Will sort your soundcloud feed into posts and reposts automatically",
   "icons": {
     "16": "icons/sc_16.png",
@@ -13,7 +13,7 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["storage", "tabs", "scripting"],
+  "permissions": ["storage", "tabs"],
   "content_scripts": [
     {
       "css": ["content.css"],
